--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,7 @@ h6 {
   .footer__top {
     gap: 30px;
     flex-direction: column;
+    justify-content: center;
   }
   .footer__logo img {
     max-width: 100%;
