add product page

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,80 @@ h6 {
 }
 .item-collection__text {
 }
+/*========================================================================================================================================================*/
 
+.product {
+  padding: 32px 0px;
+  padding-top: 144px;
+}
+.product__container {
+}
+.product__body {
+  padding: 48px;
+  border-radius: 50px;
+  background-color: #fff;
+}
+.product__image {
+  width: 100%;
+}
+.product__image:not(:last-child) {
+  margin: 0px 0px 32px 0px;
+}
+.product__image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.product__title {
+  font-size: 48px;
+  font-weight: 400;
+  line-height: 100%;
+}
+.product__title:not(:last-child) {
+  margin: 0px 0px 24px 0px;
+}
+.product__subtitle {
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 100%;
+}
+.product__subtitle:not(:last-child) {
+  margin: 0px 0px 24px 0px;
+}
+.product__content {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 32px;
+}
+.product__texts {
+}
+.product__text {
+  line-height: 1.4;
+}
+.about-product {
+}
+.about-product__title {
+  font-size: 30px;
+  font-weight: 400;
+  padding: 20px 0;
+  border-bottom: 1px solid #121723;
+}
+.about-product__item {
+  padding: 20px 0;
+  border-bottom: 1px solid #121723;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+.about-product__text {
+}
+.about-product__text:nth-child(1) {
+  text-align: start;
+}
+.about-product__text:nth-child(2) {
+  text-align: end;
+}
 /*========================================================================================================================================================*/
 
 .footer {
@@ -253,6 +326,11 @@ h6 {
     margin-bottom: 10px;
     break-inside: avoid;
   } */
+}
+@media (max-width: 600px) {
+  .product__content {
+    grid-template-columns: 1fr;
+  }
 }
 @media (max-width: 467.98px) {
   .collection__title {
@@ -369,6 +447,27 @@ h6 {
   }
   .footer__logo img {
     max-width: 100%;
+  }
+  .product__body {
+    padding: 24px;
+    border-radius: 30px;
+    background-color: #fff;
+  }
+  .product__title {
+    font-size: 30px;
+  }
+  .product__subtitle {
+    font-size: 20px;
+  }
+  .product__text {
+    font-size: 16px;
+  }
+  .about-product__text {
+    font-size: 16px;
+  }
+  .product {
+    padding: 25px 0px;
+    padding-top: 120px;
   }
 }
 
