--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,9 @@ h6 {
 .product__text {
   line-height: 1.4;
 }
+.product__text:not(:last-child) {
+  margin: 0px 0px 30px 0px;
+}
 .about-product {
 }
 .about-product__title {
